CHANGES
=======

* Updating the template
* Updating the template
* Updating the template
* Change in validation message
* Changes in Horizon folder
* Corrections in plugin files
* Keystone changes
* Horizon changes
* Cleanup
* Adding horizon folder
* Adding config changes
* Adding the dashboard folder
* Initial commit