@@ -1,6 +1,8 @@
+include setup.py
 include AUTHORS
 include ChangeLog
 exclude .gitignore
 exclude .gitreview
 
+recursive-include tfadashboard *.js *.html *.scss *.png
 global-exclude *.pyc
