@@ -3,7 +3,7 @@ name = tfa-dashboard
 summary = Astute TFA Dashboard
 description-file =
     README.rst
-author = OpenStack
+author = Nephoscale
 author-email = openstack-dev@lists.openstack.org
 home-page = http://www.openstack.org/
 classifier =
