@@ -12,11 +12,11 @@
         <p class="col-md-10">Download and open an authentication app, e.g.: <b>Google Authenticator</b></p>
 	<p class="app-links">
 		<a target="_blank" href='https://play.google.com/store/apps/details?id=com.google.android.apps.authenticator2&hl=en'>
-                    <img class="auth_app_images" alt='Get it on Google Play' src='{{ STATIC_URL }}dashboard/tfadashboard/google-play.png'>
+                    <img class="auth_app_images" alt='Get it on Google Play' src='{{ STATIC_URL }}dashboard/tfadashboard/img/google-play.png'>
                 </a>
 
                 <a target="_blank" href ='https://itunes.apple.com/us/app/google-authenticator/id388497605?mt=8tyle'>
-                    <img  class="auth_app_images" alte="Get it on App Store" src="{{ STATIC_URL }}dashboard/tfadashboard/app-store.png">
+                    <img  class="auth_app_images" alte="Get it on App Store" src="{{ STATIC_URL }}dashboard/tfadashboard/img/app-store.png">
                 </a>
 	</p>
       </div>
