@@ -1,6 +1,13 @@
 CHANGES
 =======
 
+* Updating the tfadashboard file structure
+* Correcting the urls
+* Updated files after cleanup
+* Updated dashboard files
+* Updated dashboard files
+* Correction to the qr generation uri ot fix Iphone code scanning issue
+* Correction to the Panel display
 * Updating the template
 * Updating the template
 * Updating the template
